# Chip8Emulator

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake
src/: Chip8.cpp  Layout.h  chip8.h  layout.cpp  main.cpp
